static/style.css
/* Основні стилі */
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #eef2f7;
    color: #333;
    overflow-x: hidden;
    overflow-y:visible;
}
body::-webkit-scrollbar{
    display: none;
}

a{
    text-decoration: none;
    color: #002d5d;
}

.container{
    display: flex;
    flex-direction: column;
    height: 100vh; /* Висота на весь екран */
}

/* Хедер */
header {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #0056b3;
    color: white;
    padding: 15px;
    height: 10%;
    margin: 0;
}

/* Навігація */
nav ul {
    list-style: none;
    padding: 0;
    display: flex;
    justify-content: center;
    background: #1787ff;
    margin: 0;
}
nav ul li {
    margin: 0 15px;
}
nav ul li a {
    color: white;
    text-decoration: none;
    padding: 10px;
    display: block;
    transition: background 0.3s;
}
nav ul li a:hover {
    background: #0056b3;
}

/* Основний контент */
main {
    margin: auto;
    width: 100%;
    margin: 0;
    height: 90%;
    padding: 20px;
    text-align: center;
    overflow: auto;
}

.main::-webkit-scrollbar{
    display: none;
}
.dashboard {
    background: white;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
    max-width: 800px;
    margin: auto;
}
iframe{
    width: 100%;
    height: 100%;
}

/* Статистика */
.stats {
    display: flex;
    justify-content: space-around;
    margin-top: 20px;
}
.stat-item {
    background: #dbeafe;
    padding: 15px;
    border-radius: 5px;
    flex: 1;
    margin: 0 10px;
    text-align: center;
    font-weight: bold;
}

/* Футер */
footer {
    background: #0056b3;
    color: white;
    text-align: center;
    padding: 10px;
    height: 10vh;
    position: relative;
    bottom: 0;
    width: 100%;
}

/* Елементи заголовків */
h1, h2 {
    text-align: center;
}
h2 {
    color: white;
    background-color: #0056b3;
    padding: 10px;
    border-radius: 5px;
}
h3{
    height: min-content;
    margin: 5px;
}


/* Список елементів */
.item-list {
    list-style: none;
    padding: 0;
    max-width: 600px;
    margin: auto;
}
.item-list li {
    background: white;
    margin: 5px 0;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.details-link {
    padding: 5px 15px;
    background: #1787ff;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    font-weight: bold;
    transition: background 0.3s;
}
.details-link:hover {
    background: #0056b3;
}

/* Форма */
form {
    background: white;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
    max-width: 500px;
    margin: 20px auto;
}
input, select, textarea {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 16px;
}
input:focus, select:focus, textarea:focus {
    border-color: #1787ff;
    outline: none;
    box-shadow: 0 0 5px rgba(23, 135, 255, 0.5);
}
input[type="checkbox"], input[type="radio"] {
    accent-color: #1787ff;
    width: 18px;
    height: 18px;
    cursor: pointer;
}
button {
    background: #1787ff;
    color: white;
    padding: 10px 15px;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
    transition: background 0.3s;
}
button:hover {
    background: #0056b3;
}

/* Таблиці */
table {
    width: 100%;
    border-collapse: collapse;
    margin: 20px 0;
    background: white;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
    border-radius: 5px;
    overflow: hidden;
}
th, td {
    padding: 10px;
    border: 1px solid #ccc;
    text-align: left;
}
th {
    background: #1787ff;
    color: white;
}
tbody tr:nth-child(even) {
    background: #f9f9f9;
}
tbody tr:hover {
    background: #dbeafe;
}
table tr{
    table-layout: auto;
    width: 80%;
}

/* Модальне вікно */
.modal {
    max-height: 60%;
    overflow: scroll;
    display: none;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background: white;
    padding: 20px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    flex-direction: column;
    gap: 20px;
}

.hidden {
    display: none;
}

.accordion-block{
    height: max-content;
    margin: auto;
    width: 70%;
    
}

.accordion-header {
    background-color: #f1f1f1;
    cursor: pointer;
    padding: 10px;
    border: 1px solid #ccc;
    margin-top: 5px;
    margin: auto;
    width: 100%;
}
.addition-block {
    display: none;
    width: 100%;
    height: 300px;
    border: 1px solid #ccc;
    padding: 10px;
    margin: auto;
}


.main-info{
    width: 100%;
    display: flex;
    justify-content: space-around;
    margin-bottom: 20px;
}

.main-info>div{
    gap: 10px;
    width: 30%;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding: 5px;
}

.wrapper{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.edit-wrapper{
    align-items: center;
    gap: 2px;
}

.edit-wrapper>*{
    width: 70%;
}

.clickable {
    color: #0063cc; 
    cursor: pointer; 
}

.clickable:hover {
    text-decoration: none;
    color: #003d7e;
}

.parent-wrapper{
    gap: 10px;
    width: 70%;
    margin: auto;
}

.parent{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    gap: 5px;
}

.filter-menu{
    margin: auto;
    width: 70%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 10px;

}

.zoom-panel{
    position: fixed;
    top: 10px;
    right: 10px;
    display: flex;
    justify-content: space-around;
    width: 5%;
}

.zoom-panel div{
    width: max-content;
    height: max-content;
}

.zoom-panel img{
    width: 15px;
}



.loader {
    margin: auto;
    margin-top: 100px;
    width: 50px;
    padding: 8px;
    aspect-ratio: 1;
    border-radius: 50%;
    background: #25b09b;
    --_m: 
        conic-gradient(#0000 10%,#000),
        linear-gradient(#000 0 0) content-box;
    -webkit-mask: var(--_m);
            mask: var(--_m);
    -webkit-mask-composite: source-out;
            mask-composite: subtract;
    animation: l3 1s infinite linear;
}
@keyframes l3 {to{transform: rotate(1turn)}}

.request-error{
    margin: auto;
    width: max-content;
    color: rgb(138, 3, 3);
}


.wrapper>button{

    width: 50%;
    min-width: min-content;
    align-self: center;
    margin-top: 20px;
}

.addition-filter{
    width: 30%;
    align-self: flex-end;
}

.modal img{
    max-width: 700px;
    max-height: 60%;
}

.summary{
    width: 100%;
    display: flex;
    justify-content: end;
    gap: 20px;
}

.summary>*{
    width: 50%;
}

